tests/error/iterate_error.bz
consteval arr: [??: auto] = [
];

static_assert({
	for (const v in arr) {}
	true
});
